data/all_generated_tests/raw_wast_tests/loop_StackCorruption_306.wast
;; 7. **Loop with Value-Producing Instructions**: Develop a loop containing `local.get`, `local.set`, and other immediate value-producing instructions to test operand stack interactions. This would check if `Wizard Engine` pushes and pops these values correctly, avoiding corruptions.

(assert_invalid
  (module
    (func $loop-value-instr
      (local i32)
      (local.get 0)
      (loop (param i32)
        (local.set 0)
        (local.get 0)
        drop
      )
    )
  )
  "type mismatch"
)